syntax = "proto3";

package machines;
option go_package="machinespb";


message Socket {

    string socket_id = 1;
    //string machine_id = 2;
    int32 num_cores = 3;
    //repeated Core cores = 4;
    int64 l3_cache_size = 5;
}

message HardwareThread {
    string hardware_thread_id = 1;
}

message Core {
    string core_id = 1;
    bool is_hyper_thread = 2;
    repeated HardwareThread hws = 3;
    int64 l2_cache_size = 4;
    int64 l1_cache_size = 5;
}

message Machine {
    string machine_id = 1;
    string processor = 2;
    int32 num_cores = 3;
    int32 num_sockets = 4;
    repeated Socket sockets = 5;
    int64 memory_size = 6;
    
}

message CreateMachineRequest {
    Machine machine = 1;
}

message CreateMachineResponse {
    Machine machine = 1; 
}

message ReadMachineRequest {
    string machine_id = 1;
}

message ReadMachineResponse {
    Machine machine = 1;
}


message UpdateMachineRequest {
    Machine machine = 1;
}

message UpdateMachineResponse {
    Machine machine = 1;
}


message DeleteMachineRequest {
    string machine_id = 1;
}

message DeleteMachineResponse {
    string machine_id = 1;
}

message ListMachineRequest {

}

message ListMachineResponse {
    Machine machine = 1;
}

service MachineService {
    rpc createMachine (CreateMachineRequest) returns (CreateMachineResponse);
    rpc ReadMachine (ReadMachineRequest) returns (ReadMachineResponse);
    rpc UpdateMachine (UpdateMachineRequest) returns (UpdateMachineResponse);
    rpc DeleteMachine (DeleteMachineRequest) returns (DeleteMachineResponse);
    rpc ListMachine (ListMachineRequest) returns (stream ListMachineResponse);
 }